posiGen_FullsendBox/src/objects/Energy_Audit__c.object
<CustomObject>
    <fields>
        <fullName>KneewallFiberglassSF_QTY__c</fullName>
        <label>Knee wall: Fiberglass SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KneewallFoamboardSF_Points__c</fullName>
        <formula>3.7  *  KneewallFoamboardSF_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knee wall: Foamboard SF(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KneewallFoamboardSF_QTY__c</fullName>
        <label>Knee wall: Foamboard SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDCandelabraBulb_KWh_Savings__c</fullName>
        <formula>LEDCandelabraBulb_QTY__c * 24.09</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Candelabra Bulb KWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDCandelabraBulb_Points__c</fullName>
        <formula>17.65  *  LEDCandelabraBulb_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Candelabra Bulb(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDCandelabraBulb_QTY__c</fullName>
        <label>LED - Candelabra Bulb(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDExteriorFloodlight_KWh_Savings__c</fullName>
        <formula>LEDExteriorFloodlight_QTY__c*89.79</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Exterior Floodlight KWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDExteriorFloodlight_Points__c</fullName>
        <formula>17.65  *  LEDExteriorFloodlight_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Exterior Floodlight(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDExteriorFloodlight_QTY__c</fullName>
        <label>LED - Exterior Floodlight(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDIntDimmable60w_KWh_Savings__c</fullName>
        <formula>LEDIntDimmable60w_QTY__c * 55.845</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Int. Dimmable - 60w KWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDIntDimmable60w_Points__c</fullName>
        <formula>11.24  *  LEDIntDimmable60w_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Int. Dimmable - 60w(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDIntDimmable60w_QTY__c</fullName>
        <label>LED - Int. Dimmable - 60w(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDIntNonDimmable60w_KWh_Savings__c</fullName>
        <formula>LEDIntNonDimmable60w_QTY__c*51.465</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED Int Non-Dimmable 60 KWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDIntNonDimmable60w_Points__c</fullName>
        <formula>6.8  *  LEDIntNonDimmable60w_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Int. Non-Dimmable - 60w(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDIntNonDimmable60w_QTY__c</fullName>
        <label>LED - Int. Non-Dimmable - 60w(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDInteriorFloodlight_KWh_Savings__c</fullName>
        <formula>LEDInteriorFloodlight_QTY__c * 67.89</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Interior Floodlight KWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDInteriorFloodlight_Points__c</fullName>
        <formula>15.1  *  LEDInteriorFloodlight_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Interior Floodlight(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDInteriorFloodlight_QTY__c</fullName>
        <label>LED - Interior Floodlight(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDRecessedLightInsert_KWh_Savings__c</fullName>
        <formula>LEDRecessedLightInsert_QTY__c*67.89</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Recessed Light Insert KWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDRecessedLightInsert_Points__c</fullName>
        <formula>38.0  *  LEDRecessedLightInsert_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LED - Recessed Light Insert(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEDRecessedLightInsert_QTY__c</fullName>
        <label>LED - Recessed Light Insert(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Light_Bulb_KWh_Savings_Total__c</fullName>
        <formula>LEDIntNonDimmable60w_KWh_Savings__c+LEDIntDimmable60w_KWh_Savings__c+LEDInteriorFloodlight_KWh_Savings__c+LEDExteriorFloodlight_KWh_Savings__c+LEDCandelabraBulb_KWh_Savings__c+LEDRecessedLightInsert_KWh_Savings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Light Bulb KWh Savings Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_CS_Phone__c</fullName>
        <formula>If(left(Project__r.Customer_Home_Phone__c,1)=&quot;(&quot;,

(CASE(MID(Project__r.Customer_Home_Phone__c,2,3),
&quot;318&quot;,&quot;(318) 299-6733&quot;,
&quot;225&quot;,&quot;(225) 224-7223&quot;,
&quot;985&quot;,&quot;(985) 221-4101&quot;,
&quot;337&quot;,&quot;(337) 205-0035&quot;,
&quot;504&quot;,&quot;(504) 264-6602&quot;,
&quot;(504) 264-6602&quot;)),
(CASE(left(Project__r.Customer_Home_Phone__c,3),
&quot;318&quot;,&quot;(318) 299-6733&quot;,
&quot;225&quot;,&quot;(225) 224-7223&quot;,
&quot;985&quot;,&quot;(985) 221-4101&quot;,
&quot;337&quot;,&quot;(337) 205-0035&quot;,
&quot;504&quot;,&quot;(504) 264-6602&quot;,
&quot;(504) 264-6602&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local CS Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LowFlowShowerhead_Points__c</fullName>
        <formula>35.905  *  LowFlowShowerhead_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Low Flow Showerhead(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LowFlowShowerhead_QTY__c</fullName>
        <label>Low Flow Showerhead(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MVR_of_70__c</fullName>
        <formula>Blow_MVR__c * 0.70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>70% of MVR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MakeupAirInstall_Points__c</fullName>
        <formula>59.652  *  MakeupAirInstall_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make-up Air Install(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MakeupAirInstall_QTY__c</fullName>
        <label>Make-up Air Install(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NestThermostatInstall_Points__c</fullName>
        <formula>400  *  NestThermostatInstall_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nest Thermostat Install(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NestThermostatInstall_QTY__c</fullName>
        <label>Nest Thermostat Install(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_for_the_Homeowner__c</fullName>
        <label>Notes for the Homeowner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Exterior_Lights__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Exterior Lights</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Floors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Floors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Interior_Lights__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Interior Lights</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Occupants__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Occupants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Numeric_ID__c</fullName>
        <formula>Project__r.Opportunity__r.Numeric_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Numeric ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherMeasures1_QTY__c</fullName>
        <label>Other Measures 1 (QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherMeasures2_QTY__c</fullName>
        <label>Other Measures 2 (QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Measures1_Points__c</fullName>
        <formula>OtherMeasures1_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Measures 1 (Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Measures2_Points__c</fullName>
        <formula>OtherMeasures2_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Measures 2 (Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <label>Other Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Representative_Present__c</fullName>
        <label>Owner Representative Present</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Project__r.Opportunity__r.Account_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgrammableThermostat_Points__c</fullName>
        <formula>111.3 *  ProgrammableThermostat_QTY__c</formula>
        <label>Programmable Thermostat(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgrammableThermostat_QTY__c</fullName>
        <label>Programmable Thermostat(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Energy Audit</relationshipLabel>
        <relationshipName>Energy_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PropertyOwner__c</fullName>
        <formula>Project__r.Opportunity__r.Account.FirstName &amp; &quot; &quot; &amp; Project__r.Opportunity__r.Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Energy Audit</relationshipLabel>
        <relationshipName>Energy_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RRng__c</fullName>
        <formula>IF((A1A__c+A2A__c+A3A__c)=0,0,((A1RV__c*A1A__c)+(A2RV__c * A2A__c)+(A3RV__c*A3A__c))/(A1A__c+A2A__c+A3A__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R-Value Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recalculate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shielding__c</fullName>
        <description>This is a picklist field.</description>
        <label>Shielding</label>
        <picklist>
            <picklistValues>
                <fullName>Well Shielded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exposed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SmartPowerStripInstall_Points__c</fullName>
        <formula>27.675  *  SmartPowerStripInstall_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Smart Power Strip Install(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SmartPowerStripInstall_QTY__c</fullName>
        <label>Smart Power Strip Install(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smart_Power_Strip_kWh_Savings__c</fullName>
        <formula>49*SmartPowerStripInstall_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Smart Power Strip kWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System1_CFM_Reduction__c</fullName>
        <formula>System1_TestIn_CFM__c  -  System1_TestOut_CFM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB 1 CFM Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System1_Reduced__c</fullName>
        <formula>System1_CFM_Reduction__c /  System1_TestIn_CFM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB 1 % Reduced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>System1_TestIn_CFM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DB 1 Test-In CFM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System1_TestOut_CFM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DB 1 Test-Out CFM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System2_CFM_Reduction__c</fullName>
        <formula>(System2_TestIn_CFM__c -  System2_TestOut_CFM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB 2 CFM Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System2_Reduced__c</fullName>
        <formula>System2_CFM_Reduction__c / System2_TestIn_CFM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB 2 % Reduced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>System2_TestIn_CFM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DB 2 Test-In CFM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System2_TestOut_CFM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DB 2 Test-Out CFM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System3_CFM_Reduction__c</fullName>
        <formula>(System3_TestIn_CFM__c -  System3_TestOut_CFM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB 3 CFM Reduction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System3_Reduced__c</fullName>
        <formula>System3_CFM_Reduction__c / System3_TestIn_CFM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB 3 % Reduced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>System3_TestIn_CFM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DB 3 Test-In CFM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System3_TestOut_CFM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DB 3 Test-Out CFM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thermostat_KWh_Savings_Total__c</fullName>
        <formula>(ProgrammableThermostat_QTY__c*1.12)+(NestThermostatInstall_QTY__c*1.12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thermostat KWh Savings Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <formula>(Air_points__c  
+ DSS1_points__c 
+ DSS2_points__c 
+ DSS3_points__c 
+ Cellulose_NoRebateSf_Points__c  
+ Cellulose_ElectricHeatSF_Points__c  
+ Cellulose_GasHeatSF_Points__c  
+ CelluloseHeatPumpHeatSF_Points__c  
+ FiberglassBattInsulationSF_Points__c  
+ KneewallFiberglassSF_Points__c  
+ KneewallFoamboardSF_Points__c  
+ ProgrammableThermostat_Points__c  
+ NestThermostatInstall_Points__c  
+ LEDIntNonDimmable60w_Points__c  
+ LEDIntDimmable60w_Points__c  
+ LEDInteriorFloodlight_Points__c  
+ LEDExteriorFloodlight_Points__c  
+ LEDCandelabraBulb_Points__c  
+ LEDRecessedLightInsert_Points__c  
+ AirFilters_Points__c  
+ HighLowPipeInstall_Points__c  
+ MakeupAirInstall_Points__c  
+ CapGasWallHeater_Points__c  
+ CODetector_Points__c  
+ DHWPipeInsulation_Points__c  
+ SmartPowerStripInstall_Points__c  
+ LowFlowShowerhead_Points__c  
+ FaucetAerator_Points__c  
+ BathroomVent_Points__c  
+ DryerVentInstall_Points__c  
+ AtticStairTent_Points__c  
+ ESWindowUnitCoolAir_Points__c  
+ ESHeatCoolWindowUnit_Points__c 
+ OtherMeasures2_QTY__c 
+ OtherMeasures1_QTY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_House__c</fullName>
        <description>This is a picklist field.</description>
        <label>Type of House</label>
        <picklist>
            <picklistValues>
                <fullName>Single Family Dwelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upgrade_Completed__c</fullName>
        <label>Upgrade Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Upgrades Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wall_insulation_RValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wall insulation R-Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_Heater_1_Model__c</fullName>
        <label>Water Heater 1 Model #</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Windo_Pane_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>Window Pane Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Window_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>Window Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinyl</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Window_Units_kWh_Savings_Total__c</fullName>
        <formula>ESWindowUnitCoolAir_KWh_Savings__c+ESHeatCoolWindowUnit_KWh_Savings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Window Units kWh Savings Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Windows_Area__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Windows Area (sq. ft.)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>insulation_kWh_savings__c</fullName>
        <formula>InsulationSFTotal__c *  Insulation_kWh_Table_Result__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>insulation kWh savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Energy Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Electric_Reduction_Savings_kWh__c</columns>
        <columns>Gas_ReductionThermsEquivalent__c</columns>
        <columns>Estimated_total_annual_kWh_savings__c</columns>
        <columns>Gas_Therms_Reduction__c</columns>
        <columns>Estimated_Solar_Production__c</columns>
        <columns>System1_Reduced__c</columns>
        <columns>Blow_Reduced__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Energy Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Energy Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>